--- a/package.json
+++ b/package.json
@@ -9,13 +9,10 @@
    },
    "dependencies": {
       "@types/bcrypt": "^3.0.0",
-      "@types/cookie-parser": "^1.4.2",
       "@types/express": "^4.17.7",
       "@types/express-session": "^1.17.0",
       "@types/graphql": "^14.0.0",
       "@types/jest": "^26.0.9",
-      "@types/passport": "^1.0.4",
-      "@types/passport-local": "^1.0.33",
       "@types/supertest": "^2.0.10",
       "@typescript-eslint/eslint-plugin": "^3.8.0",
       "@typescript-eslint/parser": "^3.8.0",
@@ -26,7 +23,6 @@
       "apollo-server-express": "^2.16.1",
       "apollo-server-testing": "^2.16.1",
       "bcrypt": "^5.0.0",
-      "cookie-parser": "^1.4.5",
       "cors": "^2.8.5",
       "eslint": "^7.6.0",
       "eslint-config-prettier": "^6.11.0",
@@ -40,9 +36,6 @@
       "mysql": "^2.14.1",
       "mysql2": "^2.1.0",
       "nodemon": "^2.0.4",
-      "passport": "^0.4.1",
-      "passport-ldapauth": "^2.1.4",
-      "passport-local": "^1.0.0",
       "prettier": "^2.0.5",
       "reflect-metadata": "^0.1.13",
       "supertest": "^4.0.2",
@@ -53,7 +46,14 @@
    },
    "scripts": {
       "start": "ts-node src/index.ts",
-      "test": "jest"
+      "test": "jest",
+      "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+      "schema:drop": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js schema:drop",
+      "migration:create": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:create",
+      "migration:generate": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:generate",
+      "migration:run": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run",
+      "lint": "eslint \"**/*.ts\"",
+      "format": "prettier --write \"**/*.{js,ts,json,md}\""
    },
    "jest": {
      "moduleFileExtensions": [
